lab-3/base/httproute-redirect-path.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-path
spec:
  parentRefs:
  - name: mygw
    namespace: myns
  hostnames:
  - "www.kopi-teh.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: "https"
